Fixed app background style/spacing

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -44,11 +44,12 @@ $blue: #058ED9;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        margin-bottom: 0%;
         
         button {
             width: 20%;
             font-size: large;
-            padding: 2%;
+            padding: 1%;
             background: $red-gradient;
             border: 1px solid oldlace;
             border-radius: 10px;
@@ -89,7 +90,7 @@ $blue: #058ED9;
     display: flex;
     flex-direction: column;
     width: 100%;
-    background: $red-gradient;
+    background: $red-gradient;    
 
     ::-webkit-scrollbar-track {
         background: #f1f1f1;
@@ -98,7 +99,7 @@ $blue: #058ED9;
     div {
         background: #0A0A0A;
         color: oldlace;
-        border: 1px solid oldlace;
+        border: 2px solid oldlace;
         border-radius: 25px;
         width: 60%;
         margin: 1% auto;
