--- a/src/index.scss
+++ b/src/index.scss
@@ -6,8 +6,7 @@ $grey: #353535;
 $blue: #058ED9;
 
 html {
-    background-color: $grey;
-    background-image: $black-gradient;
+    background-color: #141414;
     border-radius: 25px;
     font-family: "Century Gothic W01 Bold", sans-serif;
 }
